--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,30 +10,32 @@
             "request": "launch",
             "program": "${workspaceFolder}/smashpp",
             "args": [
-                "-rm",
-                "11,0,1,0.95/8,0,1,0.9",
-                "-r",
-                "mtdna",
-                "-t",
-                "scaf",
-                "-m",
-                "13",
-                "-dp",
-                "-f",
-                "200",
-                // "-l",
-                // "3",
-                "-th",
-                "1.0",
-                "-v", // causes issue in windows
-                "-nr",
-                "-rb",
-                "10",
-                "-re",
-                "5",
-                // "-sa",
-                // "-ft",
-                // "5"
+                // "-rm",
+                // "11,0,1,0.95/8,0,1,0.9",
+                // "-r",
+                // "mtdna",
+                // "-t",
+                // "scaf",
+                // "-m",
+                // "13",
+                // "-dp",
+                // "-f",
+                // "200",
+                // // "-l",
+                // // "3",
+                // "-th",
+                // "1.0",
+                // "-v", // causes issue in windows
+                // "-nr",
+                // "-rb",
+                // "10",
+                // "-re",
+                // "5",
+                // // "-sa",
+                // // "-ft",
+                // // "5"
+                "-viz",
+                "mtdna.scaf.pos"
             ],
             "stopAtEntry": true,
             // "stopAtEntry": false,
@@ -41,7 +43,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\mingw-w64\\mingw64\\bin\\gdb.exe",
+            // "miDebuggerPath": "C:\\mingw-w64\\mingw64\\bin\\gdb.exe",
             // "preLaunchTask": "g++.exe build active file",
             "setupCommands": [
                 {
