--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "python.pythonPath": "C:\\Users\\mori\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
-    "python.linting.pylintEnabled": false,
-    "python.linting.pep8Enabled": true,
+    "python.pythonPath": "C:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.7_3.7.1008.0_x64__qbz5n2kfra8p0\\python.exe",
     "python.linting.enabled": true,
+    "python.linting.pep8Enabled": true,
+    "python.linting.pylintEnabled": true,
     "files.associations": {
         "array": "cpp",
         "*.tcc": "cpp",
