--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.pythonPath": "C:\\Users\\Utilizador\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
     "python.linting.enabled": true,
-    "python.linting.pep8Enabled": true,
+    "python.linting.pep8Enabled": false,
     "python.linting.pylintEnabled": true,
     "files.associations": {
         "array": "cpp",
