--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ diogo/experiment1/*
 diogo/experiment2/*
 diogo/old_xp2/*
 diogo/xp2/*
+diogo/Taxonomy_Chordata_NCBI_Diogo_06-05-2019
 !diogo/xp2/mtDNA_Chordata_3327_22-03-2019
 !diogo/xp2/run.py
 !diogo/xp2/GeCo
