--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 diogo/experiment1/*
-diogo/experiment2/*
-diogo/old_xp2/*
 diogo/xp2/*
 diogo/Taxonomy_Chordata_NCBI_Diogo_06-05-2019
+!diogo/xp2/COX1_pos.tsv
+!diogo/xp2/ent
+!diogo/xp2/ent_Chondrichthyes.tsv
+!diogo/xp2/plot.R
+!diogo/xp2/rearrange_count.tsv
 !diogo/xp2/mtDNA_Chordata_3327_22-03-2019
 !diogo/xp2/run.py
 !diogo/xp2/GeCo
@@ -10,7 +13,6 @@ diogo/Taxonomy_Chordata_NCBI_Diogo_06-05-2019
 !diogo/xp2/goose-splitreads
 !diogo/xp2/unwrap.py
 !diogo/xp2/MT-CO1.fa
-!diogo/xp2/simil.*
 /*.svg
 !example.svg
 **/build
