--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ diogo/Taxonomy_Chordata_NCBI_Diogo_06-05-2019
 !diogo/xp2/ent
 !diogo/xp2/ent_Chondrichthyes.tsv
 !diogo/xp2/plot.R
-!diogo/xp2/rearrange_count.tsv
+!diogo/xp2/rearrange_count_Chondrichthyes.tsv
+!diogo/xp2/rearrange_count_Chondrichthyes.pdf
 !diogo/xp2/mtDNA_Chordata_3327_22-03-2019
 !diogo/xp2/run.py
 !diogo/xp2/GeCo
