--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,10 +5,10 @@ project(smashpp)
 # set(CMAKE_C_COMPILER /usr/local/gcc-8.2/bin/gcc-8.2)
 # set(CMAKE_CXX_COMPILER /usr/local/gcc-8.2/bin/g++-8.2)
 
-# set(CMAKE_C_COMPILER C:\\mingw-w64\\mingw64\\bin\\x86_64-w64-mingw32-gcc.exe)
-# set(CMAKE_CXX_COMPILER C:\\mingw-w64\\mingw64\\bin\\x86_64-w64-mingw32-g++.exe)
-set(CMAKE_C_COMPILER C:\\mingw\\mingw64\\bin\\x86_64-w64-mingw32-gcc.exe)
-set(CMAKE_CXX_COMPILER C:\\mingw\\mingw64\\bin\\x86_64-w64-mingw32-g++.exe)
+set(CMAKE_C_COMPILER C:\\mingw-w64\\mingw64\\bin\\x86_64-w64-mingw32-gcc.exe)
+set(CMAKE_CXX_COMPILER C:\\mingw-w64\\mingw64\\bin\\x86_64-w64-mingw32-g++.exe)
+# set(CMAKE_C_COMPILER C:\\mingw\\mingw64\\bin\\x86_64-w64-mingw32-gcc.exe)
+# set(CMAKE_CXX_COMPILER C:\\mingw\\mingw64\\bin\\x86_64-w64-mingw32-g++.exe)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -O3 -Wall -ffast-math -fno-math-errno -funsafe-math-optimizations -ffinite-math-only -fbranch-target-load-optimize -fforce-addr -march=native")
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -Wall -O0 -g")
