--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ diogo/Taxonomy_Chordata_NCBI_Diogo_06-05-2019
 !diogo/xp2/ent
 !diogo/xp2/ent_Chondrichthyes.tsv
 !diogo/xp2/ent_Mammalia.tsv
+!diogo/xp2/ent_Actinopterygii.tsv
 !diogo/xp2/plot.R
 !diogo/xp2/rearrange_count_Chondrichthyes.tsv
 !diogo/xp2/rearrange_count_Chondrichthyes.pdf
