--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ diogo/Taxonomy_Chordata_NCBI_Diogo_06-05-2019
 !diogo/xp2/plot.R
 !diogo/xp2/rearrange_count_Chondrichthyes.tsv
 !diogo/xp2/rearrange_count_Chondrichthyes.pdf
+!diogo/xp2/rearrange_count_Mammalia.tsv
+!diogo/xp2/rearrange_count_Mammalia.pdf
 !diogo/xp2/mtDNA_Chordata_3327_22-03-2019
 !diogo/xp2/run.py
 !diogo/xp2/GeCo
