--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,12 @@ diogo/Taxonomy_Chordata_NCBI_Diogo_06-05-2019
 !diogo/xp2/rearrange_count_Chondrichthyes_symmetric.tsv
 !diogo/xp2/rearrange_count_Chondrichthyes.pdf
 !diogo/xp2/rearrange_count_Mammalia.tsv
+!diogo/xp2/rearrange_count_Mammalia_symmetric.tsv
 !diogo/xp2/rearrange_count_Mammalia.pdf
 !diogo/xp2/rearrange_count_Actinopterygii.tsv
-!diogo/xp2/old_rearrange_count_Chondrichthyes.tsv
-!diogo/xp2/old_rearrange_count_Chondrichthyes_symmetric.tsv
-!diogo/xp2/old_rearrange_count_Chondrichthyes.pdf
-!diogo/xp2/old_rearrange_count_Mammalia.tsv
-!diogo/xp2/old_rearrange_count_Mammalia.pdf
-!diogo/xp2/old_rearrange_count_Actinopterygii.tsv
+!diogo/xp2/rearrange_count_Actinopterygii_symmetric.tsv
+!diogo/xp2/rearrange_count_Actinopterygii.pdf
+!diogo/xp2/old/
 !diogo/xp2/mtDNA_Chordata_3327_22-03-2019
 !diogo/xp2/run.py
 !diogo/xp2/GeCo
