--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,8 @@ xp/r.t.pos
 paper/sup.synctex(busy)
 .vscode/settings.json
 xp/dataset/bacteria
-xp/dataset/fungi
+xp/dataset/fungi/*
+!xp/dataset/fungi/Xanthomonas_oryzae_pv_oryzae
 xp/dataset/mammalia
 xp/dataset/bird/Gallus_gallus/*
 !xp/dataset/bird/Gallus_gallus/24
