--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,13 @@ paper/sup.synctex(busy)
 xp/dataset/bacteria
 xp/dataset/fungi/*
 !xp/dataset/fungi/Xanthomonas_oryzae_pv_oryzae
-xp/dataset/mammalia
+xp/dataset/mammalia/Pan_paniscus
+xp/dataset/mammalia/Pan_troglodytes
+xp/dataset/mammalia/Gorilla_gorilla_gorilla
+xp/dataset/mammalia/Homo_sapiens/*
+!xp/dataset/mammalia/Homo_sapiens/18.seq
+!xp/dataset/mammalia/Pan_troglodytes/*
+!xp/dataset/mammalia/Pan_troglodytes/18.seq
 xp/dataset/bird/Gallus_gallus/*
 !xp/dataset/bird/Gallus_gallus/24
 xp/dataset/bird/Meleagris_gallopavo/*
