--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ xp/dataset/mammalia/Pan_troglodytes
 xp/dataset/mammalia/Gorilla_gorilla_gorilla
 xp/dataset/mammalia/Homo_sapiens/*
 !xp/dataset/mammalia/Homo_sapiens/18.seq
-!xp/dataset/mammalia/Pan_troglodytes/*
+xp/dataset/mammalia/Pan_troglodytes/*
 !xp/dataset/mammalia/Pan_troglodytes/18.seq
 xp/dataset/bird/Gallus_gallus/*
 !xp/dataset/bird/Gallus_gallus/24
