--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,8 @@ xp/dataset/bird/Gallus_gallus/*
 xp/dataset/bird/Meleagris_gallopavo/*
 !xp/dataset/mammalia/Homo_sapiens/18.seq
 !xp/dataset/mammalia/Pan_troglodytes/18.seq
+!xp/dataset/mammalia/Pan_troglodytes/21.seq
+!xp/dataset/mammalia/Pan_paniscus/21.seq
 !xp/dataset/bird/Gallus_gallus/24
 !xp/dataset/bird/Meleagris_gallopavo/26
 **/*.sys*
