--- a/.gitignore
+++ b/.gitignore
@@ -77,16 +77,14 @@ xp/dataset/fungi/Kluyveromyces_lactis/**
 xp/dataset/fungi/Eremothecium_gossypii/**
 xp/dataset/fungi/Candida_glabrata/**
 !xp/dataset/fungi/Xanthomonas_oryzae_pv_oryzae
-xp/dataset/mammalia/Pan_paniscus/*
-xp/dataset/mammalia/Pan_troglodytes/*
-xp/dataset/mammalia/Gorilla_gorilla_gorilla/*
-xp/dataset/mammalia/Homo_sapiens/*
-xp/dataset/bird/Gallus_gallus/*
-xp/dataset/bird/Meleagris_gallopavo/*
-!xp/dataset/mammalia/Homo_sapiens/18.seq
-!xp/dataset/mammalia/Pan_troglodytes/18.seq
-!xp/dataset/mammalia/Pan_troglodytes/21.seq
-!xp/dataset/mammalia/Pan_paniscus/21.seq
+xp/dataset/mammalia/Pan_paniscus/**
+xp/dataset/mammalia/Pan_troglodytes/**
+xp/dataset/mammalia/Gorilla_gorilla_gorilla/**
+xp/dataset/mammalia/Homo_sapiens/**
+xp/dataset/mammalia/Mus_musculus/**
+xp/dataset/mammalia/Rattus_norvegicus/**
+xp/dataset/bird/Gallus_gallus/**
+xp/dataset/bird/Meleagris_gallopavo/**
 !xp/dataset/bird/Gallus_gallus/24
 !xp/dataset/bird/Meleagris_gallopavo/26
 !xp/dataset/fungi/Saccharomyces_cerevisiae/VII.seq
