--- a/.gitignore
+++ b/.gitignore
@@ -39,44 +39,36 @@ diogo/Taxonomy_Chordata_NCBI_Diogo_06-05-2019
 **/*.log
 **/*.out
 **/*.synctex.gz
-# goose-*
+**/*.sys*
+**/*.inf
+**/*.rev
+**/*.ext
+**/*.inf.fil
 *_bk
-GeCo
 gmon.out
 callgrind.out*
-HS18.fa
-b
-ac
-r
-t
-r-t.pos
 gprof2dot.py
 example/*.pos
 example/*.s*
-Makefile
-0.*
-1.*
-.Rproj.user
-smashpp.exe.stackdump
-RefS.TarS.pos
 smashpp
 smashpp.exe
 xp/mit.ent
 xp/.Rhistory
 xp/.RData
-aa.fasta.ab.fasta.pos
-M80517.1.seq.V01555.2.seq.pos
-M80517.1.seq.V01555.2.seq.pos
 xp/r.t.pos
 paper/sup.synctex(busy)
 .vscode/settings.json
-xp/dataset/bacteria
+xp/dataset/sim/RefPerm*
+xp/dataset/sim/TarPerm*
+xp/dataset/bacteria/**
 xp/dataset/fungi/Saccharomyces_paradoxus/**
 xp/dataset/fungi/Saccharomyces_cerevisiae/**
 xp/dataset/fungi/Kluyveromyces_lactis/**
 xp/dataset/fungi/Eremothecium_gossypii/**
 xp/dataset/fungi/Candida_glabrata/**
 !xp/dataset/fungi/Xanthomonas_oryzae_pv_oryzae
+!xp/dataset/fungi/Saccharomyces_cerevisiae/VII.seq
+!xp/dataset/fungi/Saccharomyces_paradoxus/7.seq
 xp/dataset/mammalia/Pan_paniscus/**
 xp/dataset/mammalia/Pan_troglodytes/**
 xp/dataset/mammalia/Gorilla_gorilla_gorilla/**
@@ -87,16 +79,3 @@ xp/dataset/bird/Gallus_gallus/**
 xp/dataset/bird/Meleagris_gallopavo/**
 !xp/dataset/bird/Gallus_gallus/24
 !xp/dataset/bird/Meleagris_gallopavo/26
-!xp/dataset/fungi/Saccharomyces_cerevisiae/VII.seq
-!xp/dataset/fungi/Saccharomyces_paradoxus/7.seq
-**/*.sys*
-**/*.inf
-**/*.rev
-**/*.ext
-**/*.inf.fil
-xp/hs21.seqpp21.seq.svg
-mori
-ref
-tar
-xp/dataset/sim/RefPerm*
-xp/dataset/sim/TarPerm*
