--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ xp/dataset/mammalia/Gorilla_gorilla_gorilla/**
 xp/dataset/mammalia/Homo_sapiens/**
 xp/dataset/mammalia/Mus_musculus/**
 xp/dataset/mammalia/Rattus_norvegicus/**
+xp/dataset/mammalia/Monodelphis_domestica/**
 xp/dataset/bird/Gallus_gallus/**
 xp/dataset/bird/Meleagris_gallopavo/**
 !xp/dataset/bird/Gallus_gallus/24
