--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,8 @@ xp/dataset/mammalia/Homo_sapiens/**
 xp/dataset/mammalia/Mus_musculus/**
 xp/dataset/mammalia/Rattus_norvegicus/**
 xp/dataset/mammalia/Monodelphis_domestica/**
+xp/dataset/mammalia/Bos_taurus/**
+xp/dataset/mammalia/Sus_scrofa/**
 xp/dataset/bird/Gallus_gallus/**
 xp/dataset/bird/Meleagris_gallopavo/**
 !xp/dataset/bird/Gallus_gallus/24
