--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ xp/dataset/mammalia/Rattus_norvegicus/**
 xp/dataset/mammalia/Monodelphis_domestica/**
 xp/dataset/mammalia/Bos_taurus/**
 xp/dataset/mammalia/Sus_scrofa/**
+xp/dataset/mammalia/Ovis_aries/**
 xp/dataset/bird/Gallus_gallus/**
 xp/dataset/bird/Meleagris_gallopavo/**
 !xp/dataset/bird/Gallus_gallus/24
