--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.pythonPath": "~\\Miniconda3\\python.exe",
     "python.linting.enabled": true,
-    "python.linting.pep8Enabled": true,
+    "python.linting.pycodestyleEnabled": true,
     "python.linting.pylintEnabled": false,
     "files.associations": {
         "array": "cpp",
