--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ xp/dataset/bird/Gallus_gallus/**
 xp/dataset/bird/Meleagris_gallopavo/**
 !xp/dataset/bird/Gallus_gallus/24
 !xp/dataset/bird/Meleagris_gallopavo/26
+.Rproj.user
