--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ xp/dataset/bird/Meleagris_gallopavo/**
 !xp/dataset/bird/Gallus_gallus/24
 !xp/dataset/bird/Meleagris_gallopavo/26
 .Rproj.user
+AFproject/assembled-plants
+AFproject/assembled-ecoli
+AFproject/dataset
