--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ xp/dataset/bird/Meleagris_gallopavo/**
 AFproject/assembled-plants
 AFproject/assembled-ecoli
 AFproject/dataset
+AFproject/mori
+AFproject/protein-low-ident
