--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ xp/PXO99A_MAFF311018_mauve
 xp/PXO99A_MAFF311018_mauve.backbone
 xp/PXO99A_MAFF311018_mauve.bbcols
 xp/PXO99A_MAFF311018_mauve.guide_tree
+mauve/
