--- a/.gitignore
+++ b/.gitignore
@@ -91,4 +91,10 @@ xp/PXO99A_MAFF311018_mauve
 xp/PXO99A_MAFF311018_mauve.backbone
 xp/PXO99A_MAFF311018_mauve.bbcols
 xp/PXO99A_MAFF311018_mauve.guide_tree
-mauve/
+mauve/mauve_installer_20150226.exe
+mauve/mauve_snapshot_2015-02-13/ext
+mauve/mauve_snapshot_2015-02-13/ChangeLog.html
+mauve/mauve_snapshot_2015-02-13/COPYING
+mauve/mauve_snapshot_2015-02-13/Mauve
+mauve/mauve_snapshot_2015-02-13/Mauve.jar
+mauve/mauve_snapshot_2015-02-13/README
