--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,11 @@
 # cmake_minimum_required(VERSION 2.8.12)
 project(smashpp)
-# set(CMAKE_BUILD_TYPE RelWithDebInfo)
+
+if (NOT EXISTS ${CMAKE_BINARY_DIR}/CMakeCache.txt)
+  if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
+  endif()
+endif()
 
 # set(CMAKE_C_COMPILER /usr/local/gcc-8.2/bin/gcc-8.2)
 # set(CMAKE_CXX_COMPILER /usr/local/gcc-8.2/bin/g++-8.2)
@@ -34,3 +39,5 @@ add_executable(smashpp
 #add_executable(smashpp-inv-rep src/invRep.cpp)
 
 #add_executable(excule_N src/excludeN.cpp)
+
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
