--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,6 @@ mauve/mauve_snapshot_2015-02-13/COPYING
 mauve/mauve_snapshot_2015-02-13/Mauve
 mauve/mauve_snapshot_2015-02-13/Mauve.jar
 mauve/mauve_snapshot_2015-02-13/README
+
+dataset/mammalia/Homo_sapiens/**
+dataset/mammalia/Pan_troglodytes/**
