--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "python.pythonPath": "C:\\Users\\mori\\Miniconda3\\python.exe",
     "python.linting.enabled": true,
-    "python.linting.pycodestyleEnabled": false,
-    "python.linting.pylintEnabled": true,
+    "python.linting.pycodestyleEnabled": true,
+    "python.linting.pylintEnabled": false,
     "files.associations": {
         "array": "cpp",
         "*.tcc": "cpp",
