Igonre experiment folder
Former-commit-id: e853500b0be0dace6b1b1f4e61f1fca78cda23c4 [formerly 00a8081f90ad72474550fa095d6b1ae1622278b6]
Former-commit-id: c485707a36870f006b4daf7803a3e88bb929e8e3
Former-commit-id: 94ea2092b452b65fcf09a5a1fd0173b2e93fedf2
Former-commit-id: 278a8ed7b250266c34736b7bb27373188e05717a
Former-commit-id: d5903d4940eeb1243bf5ac52995f5dc277a52f24
Former-commit-id: 6bb81dc065ee714e0bbaf7646fc4d2fb513e63c4 [formerly faa54dae5196d1c0fae4c8cc9cf5d132337aedb2]
Former-commit-id: 2534edf79e5b7edc620abdd74e2f3b393a2eea2e
Former-commit-id: 46de93c06fd2772329e9c7de098287085a736db5

--- a/.gitignore
+++ b/.gitignore
@@ -22,16 +22,12 @@ callgrind.out*
 gprof2dot.py
 example/*.pos
 example/*.s*
-# smashpp
+smashpp
 smashpp.exe
 paper/sup.synctex(busy)
 .Rproj.user
 install.bat
 desktop.ini
-# experiment/dataset/**
-experiment/dataset/mammalia/**
 test_remove_it/**
-experiment/res_new
-experiment/res_orig
-experiment/result
+experiment
 .DS_Store
