--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,6 @@
 !example.svg
 **/build
 .vscode
-**/*.blg
-**/*.bbl
-**/*.aux
-**/*.fdb_latexmk
-**/*.fls
-**/*.log
-**/*.out
-**/*.synctex.gz
 **/*.sys*
 **/*.inf
 **/*.rev
@@ -29,5 +21,5 @@ paper/sup.synctex(busy)
 install.bat
 desktop.ini
 test_remove_it/**
-experiment
+**/experiment
 .DS_Store
