--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,19 +7,12 @@ if (NOT EXISTS ${CMAKE_BINARY_DIR}/CMakeCache.txt)
   endif()
 endif()
 
-# set(CMAKE_C_COMPILER /usr/local/gcc-8.2/bin/gcc-8.2)
-# set(CMAKE_CXX_COMPILER /usr/local/gcc-8.2/bin/g++-8.2)
-
-# set(CMAKE_C_COMPILER C:\\mingw\\mingw64\\bin\\x86_64-w64-mingw32-gcc.exe)
-# set(CMAKE_CXX_COMPILER C:\\MinGW\\bin\\g++.exe)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3 -Wall")
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math -fno-math-errno -funsafe-math-optimizations -ffinite-math-only -fforce-addr -fbranch-target-load-optimize")
-  
-  # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -Wall -O0 -g")
-  # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -O3 -pg") # mem prof
 endif()
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -Wall -O0 -g")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -O3 -pg") # mem prof
 
 add_executable(smashpp 
   par.cpp
