--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
+
 project(smashpp)
 
 if (NOT EXISTS ${CMAKE_BINARY_DIR}/CMakeCache.txt)
@@ -7,27 +8,31 @@ if (NOT EXISTS ${CMAKE_BINARY_DIR}/CMakeCache.txt)
   endif()
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread -O3 -Wall")
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED 14)
+
+SET(CMAKE_CXX_FLAGS "-pthread -Wall" CACHE STRING "")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3" CACHE STRING "")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g" CACHE STRING "")
+
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math -fno-math-errno -funsafe-math-optimizations -ffinite-math-only -fforce-addr -fbranch-target-load-optimize")
 endif()
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -Wall -O0 -g")
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -O3 -pg") # mem prof
 
 add_executable(smashpp 
-  par.cpp
-  fcm.cpp
-  tbl64.cpp
-  tbl32.cpp
-  cmls4.cpp
-  logtbl8.cpp
-  filter.cpp
-  segment.cpp
-  output.cpp
-  color.cpp
-  svg.cpp
-  vizpaint.cpp
-  main.cpp
+  src/par.cpp
+  src/fcm.cpp
+  src/tbl64.cpp
+  src/tbl32.cpp
+  src/cmls4.cpp
+  src/logtbl8.cpp
+  src/filter.cpp
+  src/segment.cpp
+  src/output.cpp
+  src/color.cpp
+  src/svg.cpp
+  src/vizpaint.cpp
+  src/main.cpp
 )
 
 find_package(OpenMP)
@@ -35,6 +40,6 @@ if(OpenMP_CXX_FOUND)
     target_link_libraries(smashpp PRIVATE OpenMP::OpenMP_CXX)
 endif()
 
-add_executable(smashpp-inv-rep invRep.cpp)
+add_executable(smashpp-inv-rep src/invRep.cpp)
 
-add_executable(exclude_N excludeN.cpp)
+add_executable(exclude_N src/excludeN.cpp)
