--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   BUILD_TYPE: Release
+  BUILD: ${{github.workspace}}/build
   SOURCE: src
   PARALLEL: 8
 
@@ -27,7 +28,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} ${{env.SOURCE}}
+      run: cmake -B ${{env.BUILD}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --parallel ${{env.PARALLEL}} --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{env.BUILD}} --parallel ${{env.PARALLEL}} --config ${{env.BUILD_TYPE}}
