--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,8 @@ on:
     - master
 
 env:
-  BUILD_TYPE: Release
   BUILD: ${{github.workspace}}/build
-  SOURCE: src
+  BUILD_TYPE: Release
   PARALLEL: 8
 
 jobs:
@@ -22,10 +21,11 @@ jobs:
         os:
           - ubuntu-latest
           - macos-latest
+          - windows-latest
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Configure CMake
       run: cmake -B ${{env.BUILD}} -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
